Added metadata stream
