# Server/src/swagger.yaml
@@ -33,6 +33,11 @@ paths:
             type: string
             format: date-time
           required: false
+        - in: query
+          name: metadata
+          description: Return only the metadata
+          schema:
+            type: boolean
       responses:
         200:
           description: A frame of the stream
